<resources>
    <string name="app_name">Netra Sehat</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_message">
        Selamat Datang di Aplikasi Kesehatan Harian Tunanetra.
    </string>
    <string name="menu_litkes">
        Katakan 1 untuk Gizi Seimbang, Katakan 2 untuk informasi Covid-19,
        Katakan 3 untuk Fasilitas Pelayanan Kesehatan Terdekat, Katakan 4 untuk Kontak Person Sahabat Netra,
        Katakan 8 untuk kembali, Katakan 9 untuk ke menu utama, Katakan 0 untuk Keluar.
    </string>
    <string name="opsi7">
        katakan 7 untuk opsi selanjutnya
    </string>
    <string name="title_selamat_datang">Selamat\nDatang</string>
    <string name="title_gizi_seimbang">Gizi Seimbang</string>
    <string name="title_covid_19">Covid-19</string>
    <string name="title_pelayanan_kesehatan">Pelayanan\nKesehatan</string>
    <string name="title_pelayanan_kesehatan_terdekat">Pelayanan Kesehatan Terdekat</string>
    <string name="title_cp_sahabat_netra">Contact Person\nSahabat Netra</string>
    <string name="title_cp_sahabat_netra2">Contact Person Sahabat Netra</string>
    <string name="title_pilar_gizi_seimbang">4 Pilar Gizi Seimbang</string>
    <string name="title_pesan_gizi_seimbang">10 Pesan Gizi Seimbang</string>
    <string name="title_mengonsumsi_aneka">Mengonsumsi Aneka Ragam Makanan</string>
    <string name="title_aneka_ragam">Aneka Ragam Makanan</string>
    <string name="title_phbs">Perilaku Hidup Bersih dan Sehat</string>
    <string name="title_aktivitas_fisik">Aktivitas Fisik</string>
    <string name="title_memantau_berat_badan">Memantau Berat Badan</string>
    <string name="title_pemantauan_berat_badan">Pemantauan Berat Badan</string>
    <string name="title_makanan_pokok">Makanan Pokok</string>
    <string name="title_lauk_pauk">Lauk Pauk</string>
    <string name="title_sayuran">Sayuran</string>
    <string name="title_buah_buahan">Buah-buahan</string>
    <string name="title_air_putih">Air Putih</string>
    <string name="menu_giziSeimbang">
        Gizi seimbang adalah susunan makanan sehari-hari yang mengandung zat gizi dalam jenis dan jumlah yang sesuai dengan kebutuhan tubuh, dengan memperhatikan prinsip 4 pilar gizi seimbang dan 10 pesan gizi seimbang.
        Katakan 1 untuk 4 Pilar Gizi Seimbang, Katakan 2 untuk 10 Pesan Gizi Seimbang,
        Katakan 8 untuk kembali, Katakan 9 untuk ke menu utama, Katakan 0 untuk Keluar.
    </string>
    <string name="menu_pilarGiziSeimbang">
        Katakan 1 untuk Mengonsumsi Aneka Ragam Makanan, Katakan 2 untuk Perilaku Hidup Bersih dan Sehat,
        Katakan 3 untuk Aktivitas Fisik, Katakan 4 untuk Memantau Berat Badan,
        Katakan 8 untuk kembali, Katakan 9 untuk ke menu utama, Katakan 0 untuk Keluar.
    </string>
    <string name="menu_anekaRagamMakanan">
        Katakan 1 untuk Makanan Pokok, Katakan 2 untuk Lauk Pauk,
        Katakan 3 untuk Sayuran, Katakan 4 untuk Buah-buahan, Katakan 5 untuk Air Putih,
        Katakan 8 untuk kembali, Katakan 9 untuk ke menu utama, Katakan 0 untuk Keluar.
    </string>
    <string name="menu_detail_anekaRagamMakanan">
        Katakan 1 untuk Pengertian, Katakan 2 untuk Manfaat, Katakan 3 untuk Jenis, Katakan 4 untuk Porsi,
        Katakan 5 untuk Kandungan, Katakan 6 untuk Masalah jika konsumsi tidak sesuai,
        Katakan 8 untuk kembali, Katakan 9 untuk ke menu utama, Katakan 0 untuk Keluar.
    </string>
    <string name="menu_detail_airputih">
        Katakan 1 untuk Pengertian, Katakan 2 untuk Manfaat,Katakan 3 untuk Jenis, Katakan 4 untuk Porsi,
        Katakan 5 untuk Kandungan, Katakan 6 untuk Masalah yang timbul jika kurang minum air putih,
        Katakan 8 untuk kembali, Katakan 9 untuk ke menu utama, Katakan 0 untuk Keluar.
    </string>
    <string name="menu_detail_makananPokok">
        Katakan 1 untuk Pengertian, Katakan 2 untuk Manfaat,Katakan 3 untuk Jenis, Katakan 4 untuk Porsi,
        Katakan 5 untuk Kandungan, Katakan 6 untuk Masalah jika konsumsi tidak sesuai,
        Katakan 8 untuk kembali, Katakan 9 untuk ke menu utama, Katakan 0 untuk Keluar.
    </string>
    <string name="menu_jenisMakananPokok">
        Katakan 1 untuk Nasi, Katakan 2 untuk Jagung, Katakan 3 untuk Sagu, Katakan 4 untuk Ubi Jalar, Katakan 5 untuk Singkong,
        Katakan 6 untuk Mie, Katakan 7 untuk Roti.
        Katakan 8 untuk kembali, Katakan 9 untuk ke menu utama, Katakan 0 untuk Keluar.
    </string>
    <string name="menu_laukPauk">
        Katakan 1 untuk Penjelasan Lauk Pauk, Katakan 2 untuk Jenis-Jenis Lauk Pauk,
        Katakan 8 untuk kembali, Katakan 9 untuk ke menu utama, Katakan 0 untuk Keluar.
    </string>
    <string name="menu_jenisLaukPauk">
        Katakan 1 untuk Ayam, Katakan 2 untuk Daging, Katakan 3 untuk Ikan, Katakan 4 untuk Telur, Katakan 5 untuk Kepiting,
        Katakan 6 untuk Udang, Katakan 7 untuk Cumi-Cumi, Katakan 8 untuk Tempe, Katakan 9 untuk Tahu.
        Katakan 77 untuk kembali, Katakan 99 untuk ke menu utama, Katakan 0 untuk Keluar.
    </string>
    <string name="menu_sayuran">
        Katakan 1 untuk Penjelasan Sayuran, Katakan 2 untuk Jenis-Jenis Sayuran,
        Katakan 8 untuk kembali, Katakan 9 untuk ke menu utama, Katakan 0 untuk Keluar.
    </string>
    <string name="menu_jenisSayuran">
        Katakan 1 untuk Sayur Asem, Katakan 2 untuk Sayur Sop, Katakan 3 untuk Sayur Bayam Bening, Katakan 4 untuk Sayur Lodeh, Katakan 5 untuk Tumis Sawi,
        Katakan 6 untuk Tumis Kacang Panjang, Katakan 7 untuk Tumis Kangkung, Katakan 8 untuk Tumis Tauge, Katakan 9 untuk Wortel Rebus,
        Katakan 10 untuk Buncis Rebus, Katakan 11 untuk Labu Siam, Katakan 12 untuk Balado Terong, Katakan 13 untuk Terong Bulat Hijau, Katakan 14 untuk Terong Bulat Ungu.
        Katakan 77 untuk kembali, Katakan 99 untuk ke menu utama, Katakan 0 untuk Keluar.
    </string>
    <string name="menu_buah">
        Katakan 1 untuk Penjelasan Buah-buahan, Katakan 2 untuk Jenis-Jenis Buah-buahan,
        Katakan 8 untuk kembali, Katakan 9 untuk ke menu utama, Katakan 0 untuk Keluar.
    </string>
    <string name="menu_jenisBuah">
        Katakan 1 untuk Alpukat, Katakan 2 untuk Anggur, Katakan 3 untuk Apel, Katakan 4 untuk Belimbing, Katakan 5 untuk Durian,
        Katakan 6 untuk Jambu air, Katakan 7 untuk Jambu biji, Katakan 8 untuk Jeruk Bali, Katakan 9 untuk Jeruk Mandarin,
        Katakan 10 untuk Kedondong, Katakan 11 untuk Mangga, Katakan 12 untuk Buah Naga, Katakan 13 untuk Nanas, Katakan 14 untuk Nangka,
        Katakan 15 untuk Pear, Katakan 16 untuk Pepaya, Katakan 17 untuk Pisang, Katakan 18 untuk Rambutan, Katakan 19 untuk Salak, Katakan 20 untuk Sawo,
        Katakan 21 untuk Semangka, Katakan 22 untuk Sirsak, Katakan 23 untuk Stroberi,
        Katakan 77 untuk kembali, Katakan 99 untuk ke menu utama, Katakan 0 untuk Keluar.
    </string>
    <string name="menu_airPutih">
        Katakan 1 untuk Pengertian, Katakan 2 untuk Manfaat, Katakan 3 untuk Jenis, Katakan 4 untuk Porsi, Katakan 5 untuk Kandungan,
        Katakan 6 untuk Masalah atau penyakit yang timbul jika kurang minum air putih.
        Katakan 77 untuk kembali, Katakan 99 untuk ke menu utama, Katakan 0 untuk Keluar.
    </string>
    <string name="title_mencegah_covid19">Cara Mencegah Covid-19</string>
    <string name="protokol_covid19_cucitangan">Beberapa kasus penularan diprediksi terjadi ketika tangan yang menyentuh permukaan terkontaminasi oleh virus dan tidak sengaja memegang wajah sehingga virus berpindah dari tangan ke hidung atau mulut. Jadi  biasakan diri rajin mencuci tangan kapanpun dan dimananpun. Virus akan mati jika kita rajin mencuci tangan dengan sabun minumal 20 detik dengan mengikuti rangkain berikut ini : </string>
    <string name="protokol_covid19_pakaimasker">Sesuai protokoler kesehatan dianjurkan selalu memakai masker ketika bepergian, baik dalam keadaan sehat maupun sakit. Dalam penggunaannya, biasanya ada tiga jenis masker yang digunakan untuk melindungi diri dari Covid-19 yaitu masker kain, masker bedah, dan masker N95. \n Masker kain digunakan maksimal 4 jam dan bisa dicuci untuk digunakan lagi, sedangkan masker bedah dan masker N95 digunakan hanya sekali pakai, dan dibuang di tempat sampah. Cara menggunakan masker yaitu : \na. Pakailah masker dan pastikan dari area hidung sampai dagu bawah tertutup.\nb. Jika menyentuh permukaan masker, jika tersentuh maka segeralah mencuci tangan dengan sabun atau hand sanitizer \nc.	Saat melepas masker pastikan yang dipegang adalah tali masker, bukan permukaan masker, dan hindari menyentuh permukaan masker agar terhindar dari kuman dan virus. </string>
    <string name="protokol_covid19_menjagajarak">Physical distangcing adalah menjaga jarak fiski dari orang lain. Kalau lagi ada di tempat umum, harus jaga jarak dari orang lain setidaknya 2 meter. Hal ini karena ketika seseorang batuk atau bersin, mereka menyemprotkan tetesan cairan kecil dari hidung atau mulut mereka yang mungkin mengandung virus. Jika terlalu dekat, kamu bisa menghirup tetesan air, termasuk virus covid-19 jika orang tersebut sedang batuk.</string>
    <string name="protokol_covid19_hindarikerumunan">Kita diminta untuk menjauhi kerumunan saat berada di luar rumah. Ingat, semakin banyak dan sering Anda bertemu orang, kemungkinan terinfeksi covid-19 bisa semakin tinggi.</string>
    <string name="protokol_covid19_mengurangimobilitas"> Penularan covid-19 terjadi waktu orang yang sakit kontak dengan orang yang sehat. Untuk mencegah terjadinya penularan maka sementara waktu kita kurangi mobilitas dengan tidak  melakukan aktifitas kegiatan sosial. Aktivitas sosial tersebut antara lain : \na.	Bekerja di kantor dan belajar di sekolah \nb.	Beribadah di tempat ibadah \nc.	Berwisata, konser musik \nd.	Duduk di warung kopi, rumah makan, tempat olahraga dan pasar. \ne.	Bermain di taman bermain \nf.	Mengunjungi keluarga di hari raya atau momen lainnya \n Jika terpaksa harus keluar rumah maka hal-hal yang dilakukan adalah sebagai berikut :\na.	Memakai masker dan lengan panjang\nb.	Tutup siku kalau batuk atau bersin\nc.	Jaga jarak dengan orang lain dan hindari tempat ramai\nd.	Hindari pakai transportasi umum\ne.	Hindari menyentuh langsung tombol saklar, lift, pegangan tangga/lift dan lainnya\nf.	Cuci tangan sesering mungkin kalau sudah menyentuh permukaan benda\ng.	Hindari menyentuh wajah, hidung dan mata\nh.	Pakai tissu atau sarung tangan plastik kalau   harus menyentuh benda-benda di arae umum.\n\n\t\tJikalau telah beraktifitas di luar rumah dan pergi ke tempat yang berpotensi untuk membawa virus ke rumah, maka hal-hal yang harus dilakukan adalah:\na.	Lepaskan sendal dan sepatu sebelum masuk rumah\nb.	Baju dan masker kain langsung dicuci, masker sekali pakai langsung buang di tempat sampah tertutup.\nc.	Taruh tas, dompet, kunci, hp, dan barang yang sering disentuh di satu tempat. Lap dengan desinfketan setelah dipakai.\nd.	Segera cuci tangan dan mandi</string>
    <string name="caramencegah_covid19_menjagaimunitas">Menjaga imunitas tubuh dengan mengamalkan pola gizi seimbang.</string>
    <string name="contentDescription_selamat_datang">Gambar Selamat Datang</string>
    <string name="contentDescription_giziSeimbang">Gambar Gizi Seimbang</string>
    <string name="speech_belum_mulai">. . . . .</string>
    <string name="title_menjaga_imunitas_tubuh">b. Menjaga Imunitas Tubuh</string>
    <string name="title_mengurangi_mobilitas">5) Mengurangi Mobilitas</string>
    <string name="title_menghindari_kerumunan">4) Menghindari Kerumunan</string>
    <string name="title_menjaga_jarak">3) Menjaga jarak</string>
    <string name="title_pakai_masker">2) Pakai Masker</string>
    <string name="title_cuci_tangan">1) Cuci Tangan</string>
    <string name="title_protokol_covid">a. Protokol Covid</string>
</resources>