<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.covid19.CaraMencegahCovid19Fragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/purple_1"
            android:elevation="4dp"
            app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
            app:navigationIconTint="@color/white">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/raleway_bold"
                android:text="@string/title_mencegah_covid19"
                android:textAppearance="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title"
                android:textColor="@color/white" />
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_covid19Header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="24dp"
                app:cardElevation="6dp"
                app:cardMaxElevation="6dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp">

                    <TextView
                        android:id="@+id/txt1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:justificationMode="inter_word"
                        android:text="@string/title_protokol_covid"
                        android:textColor="@color/purple_0"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:targetApi="o" />

                    <TextView
                        android:id="@+id/txt2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:justificationMode="inter_word"
                        android:text="@string/title_cuci_tangan"
                        android:textColor="@color/purple_1"
                        android:textSize="14sp"
                        app:layout_constraintTop_toBottomOf="@id/txt1"
                        tools:targetApi="o" />

                    <TextView
                        android:id="@+id/txt3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="2dp"
                        android:justificationMode="inter_word"
                        android:text="@string/protokol_covid19_cucitangan"
                        android:textColor="@color/purple_1"
                        android:textSize="14sp"
                        app:layout_constraintTop_toBottomOf="@id/txt2"
                        tools:targetApi="o" />

                    <TextView
                        android:id="@+id/txt4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:justificationMode="inter_word"
                        android:text="@string/title_pakai_masker"
                        android:textColor="@color/purple_1"
                        android:textSize="14sp"
                        app:layout_constraintTop_toBottomOf="@id/txt3"
                        tools:targetApi="o" />

                    <TextView
                        android:id="@+id/txt5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="2dp"
                        android:justificationMode="inter_word"
                        android:text="@string/protokol_covid19_pakaimasker"
                        android:textColor="@color/purple_1"
                        android:textSize="14sp"
                        app:layout_constraintTop_toBottomOf="@id/txt4"
                        tools:targetApi="o" />

                    <TextView
                        android:id="@+id/txt6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:justificationMode="inter_word"
                        android:text="@string/title_menjaga_jarak"
                        android:textColor="@color/purple_1"
                        android:textSize="14sp"
                        app:layout_constraintTop_toBottomOf="@id/txt5"
                        tools:targetApi="o" />

                    <TextView
                        android:id="@+id/txt7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="2dp"
                        android:justificationMode="inter_word"
                        android:text="@string/protokol_covid19_menjagajarak"
                        android:textColor="@color/purple_1"
                        android:textSize="14sp"
                        app:layout_constraintTop_toBottomOf="@id/txt6"
                        tools:targetApi="o" />

                    <TextView
                        android:id="@+id/txt8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:justificationMode="inter_word"
                        android:text="@string/title_menghindari_kerumunan"
                        android:textColor="@color/purple_1"
                        android:textSize="14sp"
                        app:layout_constraintTop_toBottomOf="@id/txt7"
                        tools:targetApi="o" />

                    <TextView
                        android:id="@+id/txt9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="2dp"
                        android:justificationMode="inter_word"
                        android:text="@string/protokol_covid19_hindarikerumunan"
                        android:textColor="@color/purple_1"
                        android:textSize="14sp"
                        app:layout_constraintTop_toBottomOf="@id/txt8"
                        tools:targetApi="o" />

                    <TextView
                        android:id="@+id/txt10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:justificationMode="inter_word"
                        android:text="@string/title_mengurangi_mobilitas"
                        android:textColor="@color/purple_1"
                        android:textSize="14sp"
                        app:layout_constraintTop_toBottomOf="@id/txt9"
                        tools:targetApi="o" />

                    <TextView
                        android:id="@+id/txt11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="2dp"
                        android:justificationMode="inter_word"
                        android:text="@string/protokol_covid19_mengurangimobilitas"
                        android:textColor="@color/purple_1"
                        android:textSize="14sp"
                        app:layout_constraintTop_toBottomOf="@id/txt10"
                        tools:targetApi="o" />

                    <TextView
                        android:id="@+id/txt12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:justificationMode="inter_word"
                        android:text="@string/title_menjaga_imunitas_tubuh"
                        android:textColor="@color/purple_0"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintTop_toBottomOf="@id/txt11"
                        tools:targetApi="o" />

                    <TextView
                        android:id="@+id/txt13"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="2dp"
                        android:justificationMode="inter_word"
                        android:text="@string/caramencegah_covid19_menjagaimunitas"
                        android:textColor="@color/purple_1"
                        android:textSize="14sp"
                        app:layout_constraintTop_toBottomOf="@id/txt12"
                        tools:targetApi="o" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>