<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_abu_gradient"
    android:paddingBottom="56dp"
    tools:context=".HomeFragment">

    <TextView
        android:id="@+id/tv_speak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/speech_belum_mulai"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_welcome"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_welcome"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:fitsSystemWindows="true"
        android:translationY="-48dp"
        app:cardCornerRadius="48dp"
        app:cardElevation="6dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_welcome"
            android:contentDescription="@string/contentDescription_selamat_datang" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/raleway_extrabold"
            android:text="@string/title_selamat_datang"
            android:textColor="@color/white"
            android:textSize="32sp" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_giziSeimbang"
        android:layout_width="120dp"
        android:layout_height="130dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toTopOf="@id/cv_pelayananKesehatan"
        app:layout_constraintEnd_toStartOf="@id/cv_covid19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_welcome">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_giziSeimbang"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="28dp"
                android:layout_marginBottom="52dp"
                android:contentDescription="@string/contentDescription_giziSeimbang"
                android:src="@color/purple_0"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_giziSeimbang"
                android:layout_width="104dp"
                android:layout_height="34dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/raleway_extrabold"
                android:text="@string/title_gizi_seimbang"
                android:textAlignment="center"
                android:textColor="@color/purple_1"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_giziSeimbang" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_covid19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="@id/cv_giziSeimbang"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cv_giziSeimbang"
        app:layout_constraintTop_toTopOf="@id/cv_giziSeimbang">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_covid19"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="28dp"
                android:layout_marginBottom="52dp"
                android:src="@color/purple_0"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_covid19"
                android:layout_width="104dp"
                android:layout_height="34dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/raleway_extrabold"
                android:text="@string/title_covid_19"
                android:textAlignment="center"
                android:textColor="@color/purple_1"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_covid19" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_pelayananKesehatan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cv_contactPerson"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_giziSeimbang">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_pelayananKesehatan"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="28dp"
                android:layout_marginBottom="52dp"
                android:src="@color/purple_0"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_pelayananKesehatan"
                android:layout_width="104dp"
                android:layout_height="34dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/raleway_extrabold"
                android:text="@string/title_pelayanan_kesehatan"
                android:textAlignment="center"
                android:textColor="@color/purple_1"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_pelayananKesehatan" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_contactPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="@id/cv_pelayananKesehatan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cv_pelayananKesehatan"
        app:layout_constraintTop_toTopOf="@id/cv_pelayananKesehatan">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_contactPerson"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="28dp"
                android:layout_marginBottom="52dp"
                android:src="@color/purple_0"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_contactPerson"
                android:layout_width="104dp"
                android:layout_height="34dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/raleway_extrabold"
                android:text="@string/title_cp_sahabat_netra"
                android:textAlignment="center"
                android:textColor="@color/purple_1"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_contactPerson" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
